--- a/2022-2023/Machine Learning/1.lecture-introductions.tex
+++ b/2022-2023/Machine Learning/1.lecture-introductions.tex
@@ -1,4 +1,4 @@
-% Created 2022-08-11 jeu. 14:46
+% Created 2022-08-23 mar. 12:00
 % Intended LaTeX compiler: pdflatex
 \documentclass[10pt]{beamer}
 \usepackage[utf8]{inputenc}
@@ -44,12 +44,12 @@
 \maketitle
 
 \section*{Introduction}
-\label{sec:org494addd}
+\label{sec:orgff7a7de}
 
 \subsection*{Course Organisation}
-\label{sec:orge238814}
+\label{sec:org17986c6}
 
-\begin{frame}[label={sec:org4ae1d45}]{Welcome!}
+\begin{frame}[label={sec:org3eb66e3}]{Welcome!}
 Welcome to all the new students! Here I am going to be talking about Machine Learning
 and all of the great things that this "technology" has to offer. To begin our course,
 I shall start with a bit of house keeping -- more specifically, I will be talking
@@ -58,7 +58,7 @@ subject after-all). In addition, I will tell you where you can find the resource
 related to the course and how you can contact me, should you have any questions.
 \end{frame}
 
-\begin{frame}[label={sec:org4bea451}]{What this course is about?}
+\begin{frame}[label={sec:orgfb2fc43}]{What this course is about?}
 In this course, we will be learning about Machine Learning: firstly, what Machine
 Learning actually is; secondly, we'll take a look at some of the algorithms within
 the scope of Machine Learning, and develop an intuition about how these algorithms
@@ -66,29 +66,30 @@ work and when they would be useful; and finally, how we can compare and evaluate
 algorithms we've learnt about.
 \end{frame}
 
-\begin{frame}[label={sec:orga2ff1e0}]{How this course will be taught}
+\begin{frame}[label={sec:org73e270f}]{How this course will be taught}
 I intended to deliver this course via a series of lectures. These lectures will be
 accompanied by the PDF lecture slides, in which I will provide the definitions and
 provide reference links should you wish to do some extra reading.
 \end{frame}
 
-\begin{frame}[label={sec:orgc391f61}]{Outline of the course}
+\begin{frame}[label={sec:orgaa9fcf2}]{Outline of the course}
 \begin{center}
 \begin{tabular}{rlll}
 \toprule
 Lecture & Expected date & Length & Topic\\
 \midrule
 1 & NOW & 2 hours & Introduction\\
- &  &  & \\
+2 & LATER & 2 hours & Linear models\\
+3 & Even later\ldots{} & 2 hours & Evaluation of models\\
 \bottomrule
 \end{tabular}
 \end{center}
 \end{frame}
 
 \subsection*{Reading the lectures}
-\label{sec:orgc08d2f6}
+\label{sec:org9f09a47}
 
-\begin{frame}[label={sec:org4ba0014},fragile]{Source code}
+\begin{frame}[label={sec:orga41aa7a},fragile]{Source code}
  During the course, I would also like to supplement my algorithmic definitions and
 explanations with some programming code -- for this I will use the \href{https://julialang.org/}{Julia} programming
 language. The code snippets would look something like:
@@ -107,7 +108,7 @@ y = x .+ randn(length(x))
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:orgcf8b98d}]{References}
+\begin{frame}[label={sec:orgefd504f}]{References}
 In some cases, and is the norm with academic traditions, we'll want to include a
 reference, a link to previous written works.
 
@@ -122,7 +123,7 @@ found in the bibliography slide (or bottom of the webpage if you're viewing the 
 version of the lectures).
 \end{frame}
 
-\begin{frame}[label={sec:org197f6bd}]{About Me}
+\begin{frame}[label={sec:orga69066a}]{About Me}
 My name is Dr Jay Morgan. I am a researcher at the Université de Toulon, where I am
 developing Deep Learning models (a sub-field of Machine Learning research) for the
 study of astrophysical phenomenon.
@@ -140,7 +141,7 @@ I also publish libraries and source code online:
 If you have any questions, you can email me at jay.morgan@univ-tln.fr
 \end{frame}
 
-\begin{frame}[label={sec:org6f9a531}]{Where you can find the resources}
+\begin{frame}[label={sec:orgb61f391}]{Where you can find the resources}
 I try to make this course as accessible as possible, which means that I host these
 slides in a variety of ways to suit you.
 
@@ -154,23 +155,23 @@ lectures from all years.
 \end{frame}
 
 \section*{What is learning, anyway?}
-\label{sec:org0d9491c}
+\label{sec:org9d4501b}
 
 \subsection*{Learning about Learning}
-\label{sec:org528769b}
+\label{sec:orgbc414d0}
 
-\begin{frame}[label={sec:org8c6bb27}]{Let's answer the question of learning}
+\begin{frame}[label={sec:orgd897a6b}]{Let's answer the question of learning}
 We'll begin our journey into the world of Machine Learning by tackling the question
 of what it means to 'learn' -- how may a machine actually \emph{learn} anything?
 \end{frame}
 
-\begin{frame}[label={sec:org5cb2679}]{Study of Mice}
+\begin{frame}[label={sec:org77a4987}]{Study of Mice}
 To begin to answer the question of learning, we may turn to nature for
 advice. Principally, if we look at the studies conducted with Mice we find some idea
 to notion of learning (Shalev-Shwartz, Shai and Ben-David, Shai, 2014).
 \end{frame}
 
-\begin{frame}[label={sec:orge3a4c18}]{Bait-shyness}
+\begin{frame}[label={sec:org2815f8a}]{Bait-shyness}
 When a rat encounters a novel source of food, it will first eat a little bit of
 it. If the food is edible for the rat, it will continue to eat the food, even in
 future encounters. If, however, on the initial contact with the food, the rat deems
@@ -181,7 +182,7 @@ Here then we see the rat, on finding something new, learn from its experience, a
 use that knowledge of the experience for future encounters.
 \end{frame}
 
-\begin{frame}[label={sec:org15c74c0}]{Bait-shyness}
+\begin{frame}[label={sec:org03ec218}]{Bait-shyness}
 Our initial understanding of rat's bait-shyness was limited, but we've come to
 understand more about it. For instance, we learn that their learning process is more
 complex than originally thought. In a later experiment, where the 'poison' in the
@@ -194,7 +195,7 @@ infer a temporal relationship between the food and being shocked, while they can
 infer the same relationship with food and illness.
 \end{frame}
 
-\begin{frame}[label={sec:org82f360e}]{Computer Programs}
+\begin{frame}[label={sec:org642062e}]{Computer Programs}
 From these two examples of how rats may learn we see: the rat will make a guess about
 something now (i.e. that the food is not poisonous), it will find out how good this
 guess is (i.e. it either gets ill or it does not), and learn from how well its guess
@@ -214,7 +215,28 @@ a tasks in \(T\), as measured by \(P\), improves with experience \(E\).
 (Mitchell, Tom M, 1997)
 \end{frame}
 
-\begin{frame}[label={sec:org6a5b143}]{When might we need Machine Learning}
+\begin{frame}[label={sec:orgcd1d482},fragile]{Quiz!}
+ What \emph{function} is being used here?
+
+\begin{verbatim}
+8 ? 5   =   13
+9 ? 1   =   10
+1 ? 2   =    3
+\end{verbatim}
+\end{frame}
+
+\begin{frame}[label={sec:orgc6777bb},fragile]{Something more difficult\ldots{}}
+ What \emph{values} are being used here?
+
+\begin{verbatim}
+x * 1 + y   =   4
+x * 3 + y   =   8
+x * 5 + y   =  12
+\end{verbatim}
+\end{frame}
+
+
+\begin{frame}[label={sec:orga9af61c}]{When might we need Machine Learning}
 Why do we need computer programs that 'learn' anyway? We already have programming
 languages, why can't we just use them?
 
@@ -230,7 +252,7 @@ sizes. We could find the process of encompassing all different variations tireso
 if not impossible, and that's only for a single character!
 \end{frame}
 
-\begin{frame}[label={sec:org98bac7d}]{When might we need Machine Learning}
+\begin{frame}[label={sec:orga5a503d}]{When might we need Machine Learning}
 With Machine Learning, instead of enumerating all possible solutions within a
 programming language, we collect a bunch of examples of '8's and give them to the
 algorithm to learn from.
@@ -239,7 +261,7 @@ Through looking at these many different examples, the algorithm will/should be a
 to recognise what an 8 generally looks like.
 \end{frame}
 
-\begin{frame}[label={sec:orgd11bd01}]{Different types of Learning}
+\begin{frame}[label={sec:orgf310e64}]{Different types of Learning}
 What we have just demonstrated by way of the OCR example, is the type of learning we
 call 'Supervised Learning'. We have many examples of input (lots of different kinds
 of handwritten 8's), and we tell the learning algorithm, that they are indeed the
@@ -255,7 +277,7 @@ following:
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgad3a736}]{Supervised Learning}
+\begin{frame}[label={sec:org2f2adc2}]{Supervised Learning}
 To better formalise Supervised Learning from our previous OCR example, Supervised
 Learning is when the learning algorithm "see's" or has access to both the input and
 output.
@@ -267,7 +289,7 @@ learning algorithm if the input is indeed an '8' or something else. Mathematical
 \(X = \{(x_1, y_1), (x_2, y_2), ..., (x_n, y_n)\}\)
 \end{frame}
 
-\begin{frame}[label={sec:org4f2aa24}]{Unsupervised Learning}
+\begin{frame}[label={sec:orgfa5a45f}]{Unsupervised Learning}
 In Unsupervised learning, we have again have a dataset \(X\), who's elements are only
 inputs. In other words, there are no corresponding labels for each input. Instead,
 the learning algorithm must learn inherent patterns in the data and create labels
@@ -280,7 +302,7 @@ algorithm ourselves. So it's sort of like a supervised learning setup, except th
 learning algorithm is providing the labels itself -- hence the self-supervised.
 \end{frame}
 
-\begin{frame}[label={sec:org496ce2e}]{Reinforcement Learning}
+\begin{frame}[label={sec:org9dab41e}]{Reinforcement Learning}
 Reinforcement Learning is very different to both Supervised and Unsupervised
 Learning. Here is the type of learning you might be familiar with if you've seen 'AI'
 that learns to play video games. In this type of learning, we have the following
@@ -300,12 +322,12 @@ play-through.
 \end{frame}
 
 \subsection*{Terminology}
-\label{sec:org970d9b3}
+\label{sec:org6592988}
 
 In this section we shall take a look at the different types of data we might expect
 and the different terminology used to name them.
 
-\begin{frame}[label={sec:orgaba213d}]{What will our data look like?}
+\begin{frame}[label={sec:orgb557fd4}]{What will our data look like?}
 Data in Machine Learning applications can come in a variety of different formats. The
 most typical data formats we might see are:
 
@@ -320,7 +342,7 @@ These are the initial formats, though, before actually doing any learning, we wi
 want to transform them into a different representation that we can use.
 \end{frame}
 
-\begin{frame}[label={sec:orgaf22a3a}]{Tables}
+\begin{frame}[label={sec:org8701876}]{Tables}
 A table, or tabular, format is a \(n \times m\) set of data with \(n\) samples or
 examples, and \(m\) features for each sample. For example, suppose we have a table
 consisting the price of 100 different houses:
@@ -343,7 +365,7 @@ In a supervised learning setting, where we want to predict the price of a house 
 \(X = \{([3, 0, ...], 150,000), ([5, 10, ...], 200,000), \\..., ([10, 1000, ...], 2,000,000)\}\)
 \end{frame}
 
-\begin{frame}[label={sec:org331fdcd}]{Images/Videos}
+\begin{frame}[label={sec:orgf30bd13}]{Images/Videos}
 Images are composed of 2D or 3D arrays of numeric values. For example, in a RGB
 image that is 1024x500 pixels, we would have the array of size 1024x500x3 -- where 3
 is the red, green, and blue channel, respectively. If we have just a grayscale image,
@@ -355,7 +377,7 @@ through 24+ times a second. For a 24 frames per second video, we would have an a
 size of 1024x500x3x24 -- a 4-dimensional array.
 \end{frame}
 
-\begin{frame}[label={sec:org07defa8}]{Text}
+\begin{frame}[label={sec:orgd64a5f9}]{Text}
 Text and language data is perhaps one of the most flexible formats of data, in terms
 of the person implementing the Machine Learning algorithm is somewhat free in
 determining how to represent the language to the algorithm.
@@ -366,7 +388,7 @@ of words, parts of words, and even just characters. For example, consider:
 "this is a sentence, that shouldn't be misunderstood."
 \end{frame}
 
-\begin{frame}[label={sec:orgc1ca313}]{Tokenisation of text}
+\begin{frame}[label={sec:org109e8df}]{Tokenisation of text}
 "this is a sentence, that shouldn't be misunderstood."
 
 We could 'tokenise' (the process of converting a string into a series of tokens that
@@ -381,7 +403,7 @@ These kinds of questions of how to best represent text and language we will talk
 about in later lectures!
 \end{frame}
 
-\begin{frame}[label={sec:orga8a7d8b}]{Time-series}
+\begin{frame}[label={sec:org6f244e1}]{Time-series}
 I named this section time-series to be as general as possible. Within the type
 'time-series', we could have the following types of information:
 
@@ -396,15 +418,15 @@ their meaning.
 \end{frame}
 
 \subsection*{Example Problems}
-\label{sec:org71bd78e}
+\label{sec:org822bf43}
 
-\begin{frame}[label={sec:orgc1f0043}]{Example Problems}
+\begin{frame}[label={sec:org6674a9a}]{Example Problems}
 Throughout this course, we'll be using \emph{toy} datasets for the explanation of Machine
 Learning and its algorithms. In this section, we'll take a broad look over all the
 datasets that we'll come to be very familiar with.
 \end{frame}
 
-\begin{frame}[label={sec:orgc7189f9}]{Types of Outputs -- Regression \& Classification}
+\begin{frame}[label={sec:org1bc9d56}]{Types of Outputs -- Regression \& Classification}
 First, however, I wish to explain the difference between the terms \emph{Regression} and
 \emph{Classification}.
 
@@ -417,7 +439,7 @@ In the following toy datasets, we'll see different types of predictions that fal
 under the regression/classification output type.
 \end{frame}
 
-\begin{frame}[label={sec:orgf3cae79}]{Boston House Prices Dataset -- Tabular Regression}
+\begin{frame}[label={sec:org0366c8b}]{Boston House Prices Dataset -- Tabular Regression}
 A dataset of 506 houses in Boston, USA, collected during US Census.
 
 \begin{itemize}
@@ -430,7 +452,7 @@ More information about each of the features can be found at: \url{https://www.cs
 (Harrison Jr, David and Rubinfeld, Daniel L, 1978)
 \end{frame}
 
-\begin{frame}[label={sec:orgb4d52db},fragile]{Boston House Prices -- example rows}
+\begin{frame}[label={sec:org335974c},fragile]{Boston House Prices -- example rows}
  \begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{julia}
 using DataFrames
 using MLDatasets: BostonHousing
@@ -459,7 +481,7 @@ dataset[1:5]
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org2806502}]{Boston House Prices -- concerns}
+\begin{frame}[label={sec:org6ae6776}]{Boston House Prices -- concerns}
 The Boston dataset is an excellent dataset in the fact that it contains some ethical
 issues when it comes to Machine Learning. More specifically, some of the features in
 the data are 'dummy' variables for racial attributes (Carlisle, M., 2020). Moreover, these features show a
@@ -474,7 +496,7 @@ problem, and to demonstrate how easy it is to be accidentally unethical if you'r
 thinking about the data carefully enough. 
 \end{frame}
 
-\begin{frame}[label={sec:org2c60b06}]{Iris Dataset -- Tabular Classification}
+\begin{frame}[label={sec:orgbf51b50}]{Iris Dataset -- Tabular Classification}
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=0.4\textwidth]{images/iris.jpg}
@@ -482,7 +504,7 @@ thinking about the data carefully enough.
 \end{figure}
 \end{frame}
 
-\begin{frame}[label={sec:org7a225fa}]{Iris Dataset -- features}
+\begin{frame}[label={sec:orgdca7f1b}]{Iris Dataset -- features}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -505,7 +527,7 @@ thinking about the data carefully enough.
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orga92b559},fragile]{Iris Dataset -- example rows}
+\begin{frame}[label={sec:orgd15e72d},fragile]{Iris Dataset -- example rows}
  \begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{julia}
 using MLDatasets: Iris
 dataset = Iris();
@@ -528,7 +550,7 @@ dataset[1:2]
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:orgd492a88}]{MNIST Dataset -- Image Classification}
+\begin{frame}[label={sec:orge2eccf1}]{MNIST Dataset -- Image Classification}
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=0.5\textwidth]{images/mnist.png}
@@ -542,7 +564,7 @@ A dataset of images (of size 28x28) containing handwritten digits from 0 - 9.
 (LeCun, Yann and Bottou, L{\'e}on and Bengio, Yoshua and Haffner, Patrick, 1998)
 \end{frame}
 
-\begin{frame}[label={sec:org035b996}]{MNIST Dataset -- Features}
+\begin{frame}[label={sec:org49dcac8}]{MNIST Dataset -- Features}
 \begin{itemize}
 \item 60,000 images in the training dataset
 \item 10,000 images in the test dataset
@@ -550,7 +572,7 @@ A dataset of images (of size 28x28) containing handwritten digits from 0 - 9.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orge81af35},fragile]{MNIST Dataset -- Example Rows}
+\begin{frame}[label={sec:org4538926},fragile]{MNIST Dataset -- Example Rows}
  \begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{julia}
 using MLDatasets: MNIST
 dataset = MNIST();
@@ -562,7 +584,7 @@ dataset[1:5]
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org31fdf17},fragile]{Large Movie Review Dataset -- Text Classification/Regression}
+\begin{frame}[label={sec:orgce84ed0},fragile]{Large Movie Review Dataset -- Text Classification/Regression}
  \begin{verbatim}
 Story of a man who has unnatural feelings for a pig. Starts out with a
 opening scene that is a terrific example of absurd comedy. A formal
@@ -637,9 +659,9 @@ Shona
 \end{frame}
 
 \subsection*{Concerns \& Considerations}
-\label{sec:org4cbe0e4}
+\label{sec:orge8356a3}
 
-\begin{frame}[label={sec:org31665b9}]{Concerns \& Considerations}
+\begin{frame}[label={sec:orga22eb9e}]{Concerns \& Considerations}
 As we saw with the Boston house prices dataset, ethical concerns can easily arise
 when we use statistical analysis \& Machine Learning. But our use of Machine Learning
 carries many more concerns other than just racial biases. In this section, we'll
@@ -649,7 +671,7 @@ Learning models.
 \url{https://uksa.statisticsauthority.gov.uk/publication/ethical-considerations-in-the-use-of-machine-learning-for-research-and-statistics/}
 \end{frame}
 
-\begin{frame}[label={sec:org7060d3d}]{Compute resources -- environmental concerns}
+\begin{frame}[label={sec:orgba4c12a}]{Compute resources -- environmental concerns}
 \begin{quote}
 Large-scale deployment of AI could also have both positive and negative impacts on
 the environment. Negative impacts include increased use of natural resources, such as
@@ -666,7 +688,7 @@ Sedol in 2016 – took 50,000 times as much power as the human brain to do so.
 ({European Parliament. Directorate General for Parliamentary Research Services.}, 2020)
 \end{frame}
 
-\begin{frame}[label={sec:org40db301}]{Bias in language models}
+\begin{frame}[label={sec:org2632851}]{Bias in language models}
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=1.0\textwidth]{images/debias.png}
@@ -676,7 +698,7 @@ Sedol in 2016 – took 50,000 times as much power as the human brain to do so.
 Biases exist in language models trained on news articles (Bolukbasi, Tolga and Chang, Kai-Wei and Zou, James Y and Saligrama, Venkatesh and Kalai, Adam T, 2016).
 \end{frame}
 
-\begin{frame}[label={sec:org5eb42e3}]{Personal information}
+\begin{frame}[label={sec:orga1f918a}]{Personal information}
 In Machine Learning applications where data is generated (such as generating faces
 that don't exist), there is a possibility to expose personal information. For
 example, in a situation where these generative Machine Learning models create
@@ -686,7 +708,7 @@ the Machine Learning model could possibly leak personal information.
 (Arora, Anmol and Arora, Ananya, 2022)
 \end{frame}
 
-\begin{frame}[label={sec:orgde83c6b}]{Mental health of optimisation algorithms}
+\begin{frame}[label={sec:orgf85f335}]{Mental health of optimisation algorithms}
 This example is more specific to how algorithms are used as opposed to their specific
 design. Yet, this should still be highlighted. We have seen increasing discussion
 surrounding the use of optimisation algorithms that try to increase the amount of
@@ -726,9 +748,9 @@ float Q_rsqrt( float number )
 \end{frame}
 
 \section*{Summary}
-\label{sec:orgc6ad9b2}
+\label{sec:org95a95a7}
 
-\begin{frame}[label={sec:org09711a7}]{What is Machine Learning}
+\begin{frame}[label={sec:org82a61d2}]{What is Machine Learning}
 \begin{itemize}
 \item We've taken a look at the different kinds of frameworks for learning -- animal
 behaviour with bait-shyness, and how that translates in computer programs.
@@ -742,7 +764,7 @@ Learning.
 \end{frame}
 
 \section*{Bibliography}
-\label{sec:org9d7055c}
+\label{sec:org3796715}
 
 \begin{frame}[fragile,allowframebreaks,label=]{Bibliography}
 \noindent
